--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -19,10 +19,10 @@ RUN cd /tmp && zip -g /usr/share/jenkins/jenkins.war WEB-INF/init.groovy
 ADD ./jenkins.sh /usr/local/bin/jenkins.sh
 RUN chmod +x /usr/local/bin/jenkins.sh
 
-# VOLUME /var/jenkins_home - bind this in via -v if you want to make this persistent.
+# VOLUME /var/jenkins_home
 ENV JENKINS_HOME /var/jenkins_home
 
-# define url prefix for running jenkins behind Apache (https://wiki.jenkins-ci.org/display/JENKINS/Running+Jenkins+behind+Apache)
+# define url prefix for running jenkins behind web proxy
 ENV JENKINS_PREFIX /
 
 # for main web interface:
