created links for nodejs

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -18,6 +18,7 @@ ADD init.groovy /tmp/WEB-INF/init.groovy
 RUN cd /tmp && zip -g /usr/share/jenkins/jenkins.war WEB-INF/init.groovy
 ADD ./jenkins.sh /usr/local/bin/jenkins.sh
 RUN chmod +x /usr/local/bin/jenkins.sh
+RUN ln -s /usr/bin/nodejs /usr/bin/node
 
 # VOLUME /var/jenkins_home
 ENV JENKINS_HOME /var/jenkins_home
