--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -2,6 +2,20 @@ input {
   beats {
     port => 5044
   }
+  
+  tcp {
+    port => 5000
+    type => syslog
+  }
+  
+  udp {
+    port => 5000
+    type => syslog
+  }  
+  
+  gelf {
+    port => 12201
+  }  
 }
 
 output {
