--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -8,6 +8,8 @@ ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
 RUN apk add --no-cache go git make
 RUN mkdir $GOPATH
 RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
-RUN go get -u github.com/kardianos/govendor
+RUN go get -u github.com/kardianos/govendor \
+  && cp $GOPATH/bin/govendor /usr/local/bin \
+  && chmod +x /usr/local/bin/govendor
 
 WORKDIR $GOPATH
