--- a/reactnative/sdk28/Dockerfile
+++ b/reactnative/sdk28/Dockerfile
@@ -7,6 +7,7 @@ ENV PATH ${PATH}:/opt/tools
 RUN dpkg --add-architecture i386
 RUN apt-get -qqy update && apt-get -qqy install -y curl wget libncurses5:i386 libstdc++6:i386 zlib1g:i386
 
+RUN cd /opt && wget -q --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/8u191-b12/2787e4a523244c269598db4e85c51e0c/jdk-8u191-linux-x64.tar.gz"
 RUN cd /opt && tar xvzf jdk-8u191-linux-x64.tar.gz
 RUN cd /opt/jdk1.8.0_191 && update-alternatives --install /usr/bin/java java /opt/jdk1.8.0_191/bin/java 2 && update-alternatives --config java
 RUN cd /opt/jdk1.8.0_191 && update-alternatives --install /usr/bin/javac javac /opt/jdk1.8.0_191/bin/javac 2 && update-alternatives --config javac
