Adicionar sdk for react native

--- a/reactnative/sdk28/Dockerfile
+++ b/reactnative/sdk28/Dockerfile
@@ -14,10 +14,14 @@ RUN cd /opt/jdk1.8.0_191 && update-alternatives --install /usr/bin/javac javac /
 RUN cd /opt && rm jdk-8u191-linux-x64.tar.gz
 
 RUN cd /opt && wget -q https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip -O android-sdk.zip
-RUN cd /opt && unzip android-sdk.zip
-RUN cd /opt && rm -f android-sdk.zip
-RUN echo y | bin/sdkmanager "platforms;android-25" "build-tools;28.0.0" "extras;google;m2repository" "extras;android;m2repository"
-RUN echo y | bin/sdkmanager --licenses
+RUN cd /opt && unzip -q android-sdk.zip && rm -f android-sdk.zip
+RUN cd /opt  \
+   && echo y | tools/bin/sdkmanager "platforms;android-25" "build-tools;27.0.3" "extras;google;m2repository" "extras;android;m2repository" \
+   && echo y | tools/bin/sdkmanager "platforms;android-26" "build-tools;28.0.0" "extras;google;m2repository" "extras;android;m2repository" \
+   && echo y | tools/bin/sdkmanager "build-tools;23.0.3" "build-tools;28.0.2" \
+   && echo y | tools/bin/sdkmanager --licenses
+
+RUN cd /opt && mkdir android-sdk-linux && mv tools android-sdk-linux/
 RUN chown -R 1000:1000 $ANDROID_HOME
 
 RUN npm install -g yarn react-native-cli
