--- a/reactnative/sdk28/Dockerfile
+++ b/reactnative/sdk28/Dockerfile
@@ -18,7 +18,7 @@ RUN cd /opt && unzip -q android-sdk.zip && rm -f android-sdk.zip
 RUN cd /opt  \
    && echo y | tools/bin/sdkmanager "platforms;android-25" "build-tools;27.0.3" "extras;google;m2repository" "extras;android;m2repository" \
    && echo y | tools/bin/sdkmanager "platforms;android-26" "build-tools;28.0.0" "extras;google;m2repository" "extras;android;m2repository" \
-   && echo y | tools/bin/sdkmanager "build-tools;23.0.3" "build-tools;28.0.2"
+   && echo y | tools/bin/sdkmanager "build-tools;23.0.3" "build-tools;28.0.2" "build-tools;26.0.3"
 
 RUN cd /opt && mkdir android-sdk-linux && mv tools android-sdk-linux/
 RUN chown -R 1000:1000 $ANDROID_HOME
