--- a/mlkit/Dockerfile
+++ b/mlkit/Dockerfile
@@ -68,3 +68,5 @@ RUN cd ~ && \
     mv go /usr/local && \
     ln -s /usr/local/go/bin/go /usr/local/bin/go && \
     rm go1.12.5.linux-amd64.tar.gz
+
+RUN pip install face_recognition
